css/style.css
.box {
  height: 10%;
  width: 125px;
  text-align: center;
  border: 1px solid black;
}
html,body{
  height:100%;
  padding: 0px;
  margin: 0px;
}
.key{
     text-align: center;
     font-size: 18px;
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
}
.key:hover{
     border: 3px groove black;
     background-color: #969696;
}
.key:active{
     border: 3px inset black;
     background-color: #424242;
}


#field{
    display: table;
    width: auto;
    border: 4px solid black;
    text-align: center;
}

#row{
    display:table-row;
    width: auto;
    clear: both;
}

.cell{
  width: 50px;
  height: 29px;
  border-right: 1px solid black;
  border-bottom: 1px solid black;
  float: left;
  margin: 0px auto;
  padding: 0px;
  display: grid;
  align-content: center;
  justify-content: center;
}

